[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Compass.gd" type="Script" id=1]
[ext_resource path="res://Scripts/VehicleOptions.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Map.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Message.gd" type="Script" id=5]
[ext_resource path="res://Assets/Navigation/Compass.svg" type="Texture" id=6]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=7]
[ext_resource path="res://Assets/Navigation/SteeringWheel.svg" type="Texture" id=8]
[ext_resource path="res://Scripts/SteeringWheel.gd" type="Script" id=9]
[ext_resource path="res://default_env.tres" type="Environment" id=10]
[ext_resource path="res://Scripts/DayEnviroment.gd" type="Script" id=11]
[ext_resource path="res://Assets/Light/LowBeam.svg" type="Texture" id=12]
[ext_resource path="res://Scripts/Light.gd" type="Script" id=13]
[ext_resource path="res://Assets/Light/RotarySwitch.svg" type="Texture" id=14]
[ext_resource path="res://Assets/Light/HighBeam.svg" type="Texture" id=15]
[ext_resource path="res://Assets/Light/NoBeam.svg" type="Texture" id=16]
[ext_resource path="res://Scripts/FPSPanel.gd" type="Script" id=17]
[ext_resource path="res://Scenes/DashboardItem.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scripts/MainDashboard.gd" type="Script" id=19]

[sub_resource type="Animation" id=1]
resource_name = "Day"
length = 360.0
loop = true
step = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sun:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 90, 270 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -60, 180, 0 ), Vector3( -30, 90, 0 ), Vector3( -30, 270, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sun:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 70, 90, 270, 290 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sun:light_indirect_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 70, 90, 270, 290 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WorldEnvironment:background_energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 70, 90, 110, 140, 220, 250, 270, 290 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.1, 0.01, 0.0, 0.0, 0.01, 0.1, 1.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 50, 100, 150, 200, 250, 300, 350 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_update_day_night"
}, {
"args": [  ],
"method": "_update_day_night"
}, {
"args": [  ],
"method": "_update_day_night"
}, {
"args": [  ],
"method": "_update_day_night"
}, {
"args": [  ],
"method": "_update_day_night"
}, {
"args": [  ],
"method": "_update_day_night"
}, {
"args": [  ],
"method": "_update_day_night"
} ]
}

[node name="Main" type="Spatial"]
script = ExtResource( 7 )

[node name="Vehicles" type="Spatial" parent="."]
script = ExtResource( 2 )
handbrake_button = NodePath("../Control/VBoxContainer/HandbrakeButton")

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( -1, 7.57104e-08, -4.37114e-08, 0, 0.5, 0.866026, 8.74228e-08, 0.866026, -0.5, 0, 0, 0 )
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 10 )
script = ExtResource( 11 )
background_energy = 1.0

[node name="SunAnimator" type="AnimationPlayer" parent="."]
anims/Day = SubResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DebugInfoPanel" type="Panel" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -180.0
margin_bottom = 132.0
script = ExtResource( 17 )

[node name="GridContainer" type="GridContainer" parent="Control/DebugInfoPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 175.0
margin_bottom = 127.0
columns = 2

[node name="FPSLabel" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_right = 68.0
margin_bottom = 14.0
text = "FPS:"

[node name="FPS" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_left = 72.0
margin_right = 170.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 2

[node name="XPositionLabel" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_top = 18.0
margin_right = 68.0
margin_bottom = 32.0
text = "X position:"

[node name="XPosition" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_left = 72.0
margin_top = 18.0
margin_right = 170.0
margin_bottom = 32.0
align = 2

[node name="YPositionLabel" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_top = 36.0
margin_right = 68.0
margin_bottom = 50.0
text = "Y position:"

[node name="YPosition" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_left = 72.0
margin_top = 36.0
margin_right = 170.0
margin_bottom = 50.0
align = 2

[node name="ZPositionLabel" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_top = 54.0
margin_right = 68.0
margin_bottom = 68.0
text = "Z position:"

[node name="ZPosition" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_left = 72.0
margin_top = 54.0
margin_right = 170.0
margin_bottom = 68.0
align = 2

[node name="XRotationLabel" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_top = 72.0
margin_right = 68.0
margin_bottom = 86.0
text = "X rotation:"

[node name="XRotation" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_left = 72.0
margin_top = 72.0
margin_right = 170.0
margin_bottom = 86.0
align = 2

[node name="YRotationLabel" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_top = 90.0
margin_right = 68.0
margin_bottom = 104.0
text = "Y rotation:"

[node name="YRotation" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_left = 72.0
margin_top = 90.0
margin_right = 170.0
margin_bottom = 104.0
align = 2

[node name="ZRotationLabel" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_top = 108.0
margin_right = 68.0
margin_bottom = 122.0
text = "Z rotation:"

[node name="ZRotation" type="Label" parent="Control/DebugInfoPanel/GridContainer"]
margin_left = 72.0
margin_top = 108.0
margin_right = 170.0
margin_bottom = 122.0
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 117.0
margin_bottom = 444.0

[node name="SwitchViewButton" type="Button" parent="Control/VBoxContainer"]
margin_right = 127.0
margin_bottom = 14.0
focus_mode = 0
enabled_focus_mode = 0
text = "SWITCH_VIEW_KEY"

[node name="HandbrakeButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 18.0
margin_right = 127.0
margin_bottom = 32.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "HANDBRAKE_KEY"

[node name="SettingsButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 36.0
margin_right = 127.0
margin_bottom = 50.0
focus_mode = 0
enabled_focus_mode = 0
text = "SETTINGS_KEY"

[node name="SendMessageButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 54.0
margin_right = 127.0
margin_bottom = 68.0
focus_mode = 0
enabled_focus_mode = 0
text = "SEND_MESSAGE_KEY"

[node name="ExitGameKey" type="Button" parent="Control/VBoxContainer"]
margin_top = 72.0
margin_right = 127.0
margin_bottom = 86.0
focus_mode = 0
enabled_focus_mode = 0
text = "EXIT_GAME_KEY"

[node name="Light" type="VBoxContainer" parent="Control/VBoxContainer"]
margin_top = 90.0
margin_right = 127.0
margin_bottom = 218.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/Light"]
margin_right = 127.0
margin_bottom = 24.0
alignment = 1

[node name="NoBeam" type="TextureButton" parent="Control/VBoxContainer/Light/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 16 )

[node name="Control" type="Control" parent="Control/VBoxContainer/Light/HBoxContainer"]
margin_left = 28.0
margin_right = 47.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="LowBeam" type="TextureButton" parent="Control/VBoxContainer/Light/HBoxContainer"]
margin_left = 51.0
margin_right = 75.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )

[node name="Control2" type="Control" parent="Control/VBoxContainer/Light/HBoxContainer"]
margin_left = 79.0
margin_right = 99.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HighBeam" type="TextureButton" parent="Control/VBoxContainer/Light/HBoxContainer"]
margin_left = 103.0
margin_right = 127.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 15 )

[node name="RotarySwitch" type="TextureRect" parent="Control/VBoxContainer/Light"]
margin_top = 28.0
margin_right = 127.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 58.5, 50 )
texture = ExtResource( 14 )
stretch_mode = 6
script = ExtResource( 13 )

[node name="Compass" type="TextureRect" parent="Control/VBoxContainer"]
margin_top = 222.0
margin_right = 127.0
margin_bottom = 322.0
rect_pivot_offset = Vector2( 58.5, 50 )
texture = ExtResource( 6 )
stretch_mode = 6
script = ExtResource( 1 )

[node name="SteeringWheel" type="TextureRect" parent="Control/VBoxContainer"]
margin_top = 326.0
margin_right = 127.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( 58.5, 50 )
texture = ExtResource( 8 )
stretch_mode = 6
script = ExtResource( 9 )

[node name="Map" type="Control" parent="Control/VBoxContainer"]
margin_top = 430.0
margin_right = 127.0
margin_bottom = 680.0
rect_min_size = Vector2( 0, 250 )
script = ExtResource( 3 )

[node name="Dashboard" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -105.0
margin_top = -144.0
margin_right = 105.0

[node name="Dashboard" type="HBoxContainer" parent="Control/Dashboard"]
margin_left = 5.0
margin_top = 5.0
margin_right = 205.0
margin_bottom = 125.0
script = ExtResource( 19 )

[node name="Speedometer" parent="Control/Dashboard/Dashboard" instance=ExtResource( 18 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 200.0
margin_bottom = 134.0
title = "SPEED_KEY"
content_text = "0 km/h"

[node name="Button" type="Button" parent="Control/Dashboard/Dashboard/Speedometer"]
margin_top = 120.0
margin_right = 120.0
margin_bottom = 134.0
rect_rotation = -90.0
focus_mode = 0
enabled_focus_mode = 0
text = "CHANGE_UNIT_KEY"

[node name="Message" type="Control" parent="Control"]
script = ExtResource( 5 )

[node name="SendMessageDialog" type="ConfirmationDialog" parent="Control/Message"]
margin_right = 507.0
margin_bottom = 256.0
window_title = "SEND_MESSAGE_KEY"

[node name="GridContainer" type="GridContainer" parent="Control/Message/SendMessageDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 499.0
margin_bottom = 226.0
columns = 2

[node name="ToLabel" type="Label" parent="Control/Message/SendMessageDialog/GridContainer"]
margin_right = 87.0
margin_bottom = 14.0
text = "TO_KEY"

[node name="ToOptionButton" type="OptionButton" parent="Control/Message/SendMessageDialog/GridContainer"]
margin_left = 91.0
margin_right = 491.0
margin_bottom = 14.0

[node name="MessageLabel" type="Label" parent="Control/Message/SendMessageDialog/GridContainer"]
margin_top = 18.0
margin_right = 87.0
margin_bottom = 218.0
size_flags_vertical = 1
text = "MESSAGE_KEY"

[node name="MessageTextEdit" type="TextEdit" parent="Control/Message/SendMessageDialog/GridContainer"]
margin_left = 91.0
margin_top = 18.0
margin_right = 491.0
margin_bottom = 218.0
rect_min_size = Vector2( 400, 200 )

[node name="GetMessagePanel" type="Panel" parent="Control/Message"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 110.0
margin_top = -164.0
margin_right = 611.0

[node name="GridContainer" type="GridContainer" parent="Control/Message/GetMessagePanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 496.0
margin_bottom = 141.0
columns = 2

[node name="FromLabel" type="Label" parent="Control/Message/GetMessagePanel/GridContainer"]
margin_right = 87.0
margin_bottom = 14.0
text = "FROM_KEY"

[node name="FromTextLabel" type="Label" parent="Control/Message/GetMessagePanel/GridContainer"]
margin_left = 91.0
margin_right = 491.0
margin_bottom = 14.0

[node name="ToLabel" type="Label" parent="Control/Message/GetMessagePanel/GridContainer"]
margin_top = 18.0
margin_right = 87.0
margin_bottom = 32.0
text = "TO_KEY"

[node name="ToTextLabel" type="Label" parent="Control/Message/GetMessagePanel/GridContainer"]
margin_left = 91.0
margin_top = 18.0
margin_right = 491.0
margin_bottom = 32.0

[node name="MessageLabel" type="Label" parent="Control/Message/GetMessagePanel/GridContainer"]
margin_top = 36.0
margin_right = 87.0
margin_bottom = 136.0
size_flags_vertical = 1
text = "MESSAGE_KEY"

[node name="MessageTextEdit" type="TextEdit" parent="Control/Message/GetMessagePanel/GridContainer"]
margin_left = 91.0
margin_top = 36.0
margin_right = 491.0
margin_bottom = 136.0
rect_min_size = Vector2( 400, 100 )
readonly = true

[node name="ReplyButton" type="Button" parent="Control/Message/GetMessagePanel/GridContainer"]
margin_top = 140.0
margin_right = 87.0
margin_bottom = 154.0
text = "REPLY_KEY"

[node name="HideButton" type="Button" parent="Control/Message/GetMessagePanel/GridContainer"]
margin_left = 91.0
margin_top = 140.0
margin_right = 491.0
margin_bottom = 154.0
text = "HIDE_KEY"

[node name="Timer" type="Timer" parent="Control/Message/GetMessagePanel"]
wait_time = 20.0
one_shot = true

[node name="SettingsDialog" type="ConfirmationDialog" parent="Control"]
margin_right = 265.0
margin_bottom = 146.0
window_title = "SETTINGS_KEY"
script = ExtResource( 4 )

[node name="GridContainer" type="GridContainer" parent="Control/SettingsDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 257.0
margin_bottom = 198.0
columns = 2

[node name="EngineForceValueLabel" type="Label" parent="Control/SettingsDialog/GridContainer"]
margin_top = 1.0
margin_right = 171.0
margin_bottom = 15.0
text = "ENGINE_FORCE_VALUE_KEY"

[node name="EngineForceValueSpinBox" type="SpinBox" parent="Control/SettingsDialog/GridContainer"]
margin_left = 175.0
margin_right = 249.0
margin_bottom = 24.0
min_value = 20.0
step = 5.0
value = 40.0

[node name="BrakeValueLabel" type="Label" parent="Control/SettingsDialog/GridContainer"]
margin_top = 21.0
margin_right = 116.0
margin_bottom = 35.0
text = "BRAKE_VALUE_KEY"

[node name="BrakeValueSpinBox" type="SpinBox" parent="Control/SettingsDialog/GridContainer"]
margin_left = 120.0
margin_top = 20.0
margin_right = 194.0
margin_bottom = 44.0
min_value = 2.0
max_value = 30.0
value = 10.0

[node name="SteerLimitLabel" type="Label" parent="Control/SettingsDialog/GridContainer"]
margin_top = 40.0
margin_right = 106.0
margin_bottom = 54.0
text = "STEER_LIMIT_KEY"

[node name="SteerLimitSpinBox" type="SpinBox" parent="Control/SettingsDialog/GridContainer"]
margin_left = -8.0
margin_top = -8.0
margin_right = 66.0
margin_bottom = 16.0
min_value = 2.0
max_value = 8.0
value = 4.0

[node name="SteerSpeedLabel" type="Label" parent="Control/SettingsDialog/GridContainer"]
margin_top = 58.0
margin_right = 109.0
margin_bottom = 72.0
text = "STEER_SPEED_KEY"

[node name="SteerSpeedSpinBox" type="SpinBox" parent="Control/SettingsDialog/GridContainer"]
margin_left = -8.0
margin_top = -8.0
margin_right = 66.0
margin_bottom = 16.0
min_value = 10.0
max_value = 20.0
value = 15.0

[node name="ControlDeviceLabel" type="Label" parent="Control/SettingsDialog/GridContainer"]
margin_right = 141.0
margin_bottom = 14.0
text = "CONTROL_DEVICE_KEY"

[node name="ControlDeviceOptionButton" type="OptionButton" parent="Control/SettingsDialog/GridContainer"]
margin_left = -8.0
margin_top = -8.0
margin_right = 6.0
margin_bottom = 6.0

[node name="CrashMonitorLabel" type="Label" parent="Control/SettingsDialog/GridContainer"]
margin_left = -8.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 6.0
text = "CRASH_MONITOR_KEY"

[node name="CrashMonitorCheckButton" type="CheckButton" parent="Control/SettingsDialog/GridContainer"]
margin_left = -8.0
margin_top = -8.0
margin_right = 56.0
margin_bottom = 24.0

[node name="CrashsReportedLabel" type="Label" parent="Control/SettingsDialog/GridContainer"]
margin_left = -8.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 6.0
text = "CRASHS_REPORTED_KEY"

[node name="CrashsReportedSpinBox" type="SpinBox" parent="Control/SettingsDialog/GridContainer"]
margin_left = -8.0
margin_top = -8.0
margin_right = 66.0
margin_bottom = 16.0
min_value = 1.0
value = 20.0

[connection signal="setup_ready" from="." to="Control/DebugInfoPanel" method="set_vehicle"]
[connection signal="setup_ready" from="." to="Control/SettingsDialog" method="_setup"]
[connection signal="pressed" from="Control/VBoxContainer/SwitchViewButton" to="Vehicles" method="_switch_view"]
[connection signal="toggled" from="Control/VBoxContainer/HandbrakeButton" to="Vehicles" method="_handbreak_button_toggled"]
[connection signal="pressed" from="Control/VBoxContainer/SettingsButton" to="Control/SettingsDialog" method="popup_centered"]
[connection signal="pressed" from="Control/VBoxContainer/SendMessageButton" to="Control/Message" method="_send"]
[connection signal="pressed" from="Control/VBoxContainer/ExitGameKey" to="Vehicles" method="_exit_game"]
[connection signal="pressed" from="Control/VBoxContainer/Light/HBoxContainer/NoBeam" to="Vehicles" method="_no_beam"]
[connection signal="pressed" from="Control/VBoxContainer/Light/HBoxContainer/NoBeam" to="Control/VBoxContainer/Light/RotarySwitch" method="_no_beam"]
[connection signal="pressed" from="Control/VBoxContainer/Light/HBoxContainer/LowBeam" to="Vehicles" method="_low_beam"]
[connection signal="pressed" from="Control/VBoxContainer/Light/HBoxContainer/LowBeam" to="Control/VBoxContainer/Light/RotarySwitch" method="_low_beam"]
[connection signal="pressed" from="Control/VBoxContainer/Light/HBoxContainer/HighBeam" to="Vehicles" method="_high_beam"]
[connection signal="pressed" from="Control/VBoxContainer/Light/HBoxContainer/HighBeam" to="Control/VBoxContainer/Light/RotarySwitch" method="_high_beam"]
[connection signal="resized" from="Control/VBoxContainer/Light/RotarySwitch" to="Control/VBoxContainer/Light/RotarySwitch" method="_update_pivoit_offset"]
[connection signal="resized" from="Control/VBoxContainer/Compass" to="Control/VBoxContainer/Compass" method="_update_pivoit_offset"]
[connection signal="resized" from="Control/VBoxContainer/SteeringWheel" to="Control/VBoxContainer/SteeringWheel" method="_update_pivoit_offset"]
[connection signal="pressed" from="Control/Dashboard/Dashboard/Speedometer/Button" to="Control/Dashboard/Dashboard" method="_change_speed_unit"]
[connection signal="confirmed" from="Control/Message/SendMessageDialog" to="Control/Message" method="_approved"]
[connection signal="pressed" from="Control/Message/GetMessagePanel/GridContainer/ReplyButton" to="Control/Message" method="_send"]
[connection signal="pressed" from="Control/Message/GetMessagePanel/GridContainer/HideButton" to="Control/Message/GetMessagePanel" method="hide"]
[connection signal="timeout" from="Control/Message/GetMessagePanel/Timer" to="Control/Message/GetMessagePanel" method="hide"]
[connection signal="confirmed" from="Control/SettingsDialog" to="Control/SettingsDialog" method="_dialog_confirmed"]
